[project]
name = "sortabilitytime"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher Lohse",email = "lohsec@tcd.ie"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tigramite (>=5.2.8.1,<6.0.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "causalchamber (>=0.1.5,<0.2.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
